objects/Planner__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Planner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <picklist>
            <picklistValues>
                <fullName>ABC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XYZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FGH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Planner</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>